--- a/frontend/src/screens/locales/en.json
+++ b/frontend/src/screens/locales/en.json
@@ -116,7 +116,8 @@
 
   
   "callus": "Call us",
-      "searchCityname": "Search by city or place name"
+      "searchCityPlaceName": "Search by city or place name",
+       "noPlacesFoundSameCity": "No places found in the same city/region"
 
 
  
