--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -113,9 +113,11 @@
       "SuggestedPlaces": "أماكن مقترحة",
         "trip": "رحلة",
         "callus": "اتصل بنا",
+          "PopularLebaneseDishes": "أشهر الأطباق اللبنانية",
    
    
-    "searchCityPlaceName": "ابحث حسب المدينة أو اسم المكان"
+    "searchCityPlaceName": "ابحث حسب المدينة أو اسم المكان",
+     "noPlacesFoundSameCity": "لا توجد أماكن في نفس المدينة/المنطقة"
   
 
 
